[package]
name = "embedded-sdmmc-rs-async"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.1.0", path = "../embassy/embassy-executor", features = ["defmt", "integrated-timers"] }
embassy-nrf = { version = "0.1.0", path = "../embassy/embassy-nrf", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac"] }
defmt = "0.3"